2007-04-03  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-model-layout.el (rails-model-layout:keymap): created

	* rails-core.el (rails-core:buffer-file-match): allow passing nil

	* rails-controller-layout.el (rails-controller-layout:keymap): created

	* rails-cmd-proxy.el (rails-cmd-proxy:convert-buffer-from-remote): fixed compilation warning 

	* rails-ruby.el: added flymake support to on the fly syntax check in ruby-mode

	* rails-test.el (rails-test:error-regexp-alist): updated

2007-04-02  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-lib.el (merge-abbrev-tables): mark abbrev as system 

2007-04-01  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-snippets.el: updated snippets

	* rails-ui.el (rails-minor-mode-nav-menu-bar-map): created separate menu entry for "Navigate", "Database", "Tests"

	* rails-test.el (rails-test:error-regexp-alist): updated regexp to match errors

	* rails-snippets.el (rails-snippets:list): new snippet group RESTful

	* rails-ruby.el (ruby-align-rules-list): updated regexp for align

	* rails-rake.el (rails-rake:migrate)
	(rails-rake:migrate-with-version)
	(rails-rake:migrate-to-prev-version): created

	* rails-lib.el: added alias string-join to strings-join

	* rails-core.el (rails-core:mailer-file): fixed bug #9721
	(rails-core:migration-versions): created

	* rails-compat.el (indent-or-complete): restored completion-ui support

2007-03-30  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-test.el (rails-test:error-regexp-alist): updated

	* rails-scripts.el (rails-script:run): added
	`rails-cmd-proxy:convert-buffer-from-remote' to
	`after-change-functions'

	* rails-ruby.el: added `align' integration code

	* rails-lib.el (string-repeat): created

	* rails-cmd-proxy.el (rails-cmd-proxy:convert-buffer-from-remote): created

	* rails-project.el: created

	* rails-compat.el: created

2007-03-29  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails.el (indented-or-complete): added support completion-ui