@@ -1,5 +1,7 @@
 2007-04-03  Dmitry Galinsky  <dima.exe@gmail.com>
 
+	* rails-ui.el (rails-minor-mode-db-menu-bar-map): updated
+
 	* rails-model-layout.el (rails-model-layout:keymap): created
 
 	* rails-core.el (rails-core:buffer-file-match): allow passing nil
